--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ PORT=4000
 JWT_SECRET=
 HOST_SWAGGER=localhost:4000
 SERVICE_HOST=http://localhost:4000
+STATUS_CODE_ERROR=401
+STATUS_CODE=200
 
 DB_USERNAME_DEV=
 DB_PASSWORD_DEV=
