--- a/.env
+++ b/.env
@@ -6,10 +6,10 @@ SERVICE_HOST=http://localhost:4000
 STATUS_CODE_ERROR=401
 STATUS_CODE=200
 
-DB_USERNAME_DEV=
-DB_PASSWORD_DEV=
-DB_NAME_DEV=
-DB_HOST_DEV=
+DB_USERNAME_DEV=hrSystemAdmin
+DB_PASSWORD_DEV=4Dm!n2020@Interset
+DB_NAME_DEV=defect_log_db
+DB_HOST_DEV=103.253.72.178
 DB_PORT_DEV=5432
 DB_DIALECT_DEV=postgres
 
