--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon ./bin/server.ts",
     "build": "rm -rf build && sucrase ./src -d ./build --transforms typescript,imports",
-    "start:dev": "npm run build && nodemon ./build/bin/server.js"
+    "start:dev": "npm run build && nodemon ./build/bin/server.js",
+    "up-models": "sequelize-auto -o './src/models' -d defect_log_db -h 103.253.72.178 -u hrSystemAdmin -p 5432 -x 4Dm!n2020@Interset -e postgres -l ts"
   },
   "author": "",
   "license": "ISC",
@@ -27,8 +28,12 @@
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "nanoid": "^3.1.23",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
     "pino": "^6.11.3",
     "pino-pretty": "^5.0.2",
+    "sequelize": "^6.6.2",
+    "sequelize-typescript": "^2.1.0",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
@@ -48,8 +53,13 @@
     "@types/nanoid": "^3.0.0",
     "@types/node": "^15.12.2",
     "@types/pino": "^6.3.8",
+    "@types/validator": "^13.1.4",
     "@types/yup": "^0.29.11",
+    "@typescript-eslint/parser": "^4.27.0",
+    "eslint": "^7.28.0",
     "nodemon": "^2.0.7",
+    "sequelize-auto": "^0.8.3",
+    "sequelize-cli": "^6.2.0",
     "sucrase": "^3.18.2",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
