--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/nanoid": "^3.0.0",
     "@types/node": "^15.12.2",
     "@types/pino": "^6.3.8",
+    "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.4",
     "@types/yup": "^0.29.11",
     "@typescript-eslint/parser": "^4.27.0",
