--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "init-node-typescript",
+  "name": "backend-income-expenses",
   "version": "1.0.0",
   "description": "",
   "main": "src/app.ts",
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -21,7 +22,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "express-paginate": "^1.0.2",
     "express-session": "^1.17.2",
+    "express-validator": "^6.12.1",
     "helmet": "^4.6.0",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
@@ -48,6 +51,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.12",
     "@types/express-fileupload": "^1.1.6",
+    "@types/express-paginate": "^1.0.1",
     "@types/express-session": "^1.17.3",
     "@types/http-errors": "^1.8.0",
     "@types/jsonwebtoken": "^8.5.1",
